--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 anyio==3.5.0
+APScheduler==3.9.1
 async-generator==1.10
+asyncio==3.4.3
 attrs==21.4.0
+Automat==20.2.0
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.10.0
 boto3==1.21.21
 botocore==1.24.21
@@ -10,35 +14,54 @@ cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.0.4
+constantly==15.1.0
 cryptography==36.0.2
+cssselect==1.1.0
 datapackage==1.15.2
 deprecation==2.1.0
 et-xmlfile==1.1.0
+filelock==3.6.0
+Flask==2.0.3
 gotrue==0.5.0
 greenlet==1.1.2
 h11==0.12.0
 httpcore==0.14.7
 httpx==0.21.3
+hyperlink==21.0.0
 idna==3.3
 ijson==3.1.4
 importlib-resources==5.4.0
+incremental==21.3.0
 iniconfig==1.1.1
 isodate==0.6.1
+itemadapter==0.5.0
+itemloaders==1.0.4
+itsdangerous==2.1.1
+Jinja2==3.0.3
 jmespath==1.0.0
 jsonlines==3.0.0
 jsonpointer==2.2
 jsonschema==4.4.0
 linear-tsv==1.1.0
+lxml==4.8.0
+MarkupSafe==2.1.1
 numpy==1.22.3
 openpyxl==3.0.9
 outcome==1.1.0
 packaging==21.3
 pandas==1.4.1
+parsel==1.6.0
 pluggy==1.0.0
 postgrest-py==0.9.2
+praw==7.5.0
+prawcore==2.3.0
+Protego==0.2.1
 py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.9.0
+PyDispatcher==2.0.5
 pyOpenSSL==22.0.0
 pyparsing==3.0.7
 pyrsistent==0.18.1
@@ -48,27 +71,42 @@ pytest-xvfb==2.0.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 PyVirtualDisplay==3.0
+queuelib==1.6.2
 realtime==0.0.4
 requests==2.27.1
+requests-file==1.5.1
 rfc3986==1.5.0
 s3transfer==0.5.2
+Scrapy==2.6.1
 selenium==4.1.3
+service-identity==21.1.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.32
+stocksymbol==0.0.5
 supabase==0.5.3
 tableschema==1.20.2
 tabulator==1.53.5
+tldextract==3.2.0
 tomli==2.0.1
 trio==0.20.0
 trio-websocket==0.9.2
+Twisted==22.2.0
 typing-extensions==4.1.1
+tzdata==2022.1
+tzlocal==4.1
 unicodecsv==0.14.1
+update-checker==0.18.0
 urllib3==1.26.9
+w3lib==1.22.0
+websocket-client==1.3.1
 websockets==9.1
+Werkzeug==2.0.3
 wsproto==1.1.0
 xlrd==2.0.1
 zipp==3.7.0
+zope.interface==5.4.0
