--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ outcome==1.1.0
 packaging==21.3
 pandas==1.4.1
 parsel==1.6.0
+pkg_resources==0.0.0
 pluggy==1.0.0
 postgrest-py==0.9.2
 praw==7.5.0
@@ -96,7 +97,7 @@ tomli==2.0.1
 trio==0.20.0
 trio-websocket==0.9.2
 Twisted==22.2.0
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 tzdata==2022.1
 tzlocal==4.1
 unicodecsv==0.14.1
