--- a/requirements.txt
+++ b/requirements.txt
@@ -206,7 +206,7 @@ tomli==2.0.1
 trio==0.20.0
 trio-websocket==0.9.2
 twilio==7.8.1
-Twisted==22.2.0
+Twisted>=22.4.0rc1
 typing_extensions==4.1.1
 tzdata==2022.1
 tzlocal==4.1
